--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="script" href="script.js">
+    <link rel="script" href="catalog.json">
     <title>Test</title>
+
 </head>
 
 <body>
@@ -43,35 +46,35 @@
                         <li>В резерве: 3000</li>
                         <li><img src="./img/reserv.png" alt=""> Текущие резервы</li>
                     </ul>
-
-
                 </div>
             </div>
         </div>
-
-
-
-
-
 
         <div class="sidebar">
             <div class="sidebar-menu-area">
                 <img class="menu-logo" src="./img/logo2.png" alt="">
                 <ul class="sidebar-ul">
                     <li>
-                        <a class="menu-item menu-item-current" href="index.html"> <img src="./img/user2.png" alt=""> Мои
+                        <a class="menu-item" href="index.html"> <img src="./img/user2.png" alt=""> Мои
                             заказы</a>
                     </li>
 
                     <li>
-                        <a class="menu-item" href=""> <img src="./img/catalog.png" alt=""> Каталог</a>
+                        <a class="menu-item" href="catalog.html"> <img src="./img/catalog.png" alt=""> Каталог</a>
                     </li>
 
                     <li>
-                        <a class="menu-item" href=""> <img src="./img/cart.png" alt=""> Корзина</a>
+                        <a class="menu-item" href="cart.html"> <img src="./img/cart.png" alt=""> Корзина</a>
                     </li>
                 </ul>
             </div>
+
+            <div class=sidebar-cart-area>
+
+
+            </div>
+
+
         </div>
 
 
@@ -195,7 +198,7 @@
 
 
 
-        <script src="script.js"></script>
+
     </div>
 </body>
 
