--- a/catalog.html
+++ b/catalog.html
@@ -58,11 +58,11 @@
                     </li>
 
                     <li>
-                        <a class="menu-item" href="/catalog.html"> <img src="./img/catalog.png" alt=""> Каталог</a>
+                        <a class="menu-item" href="catalog.html"> <img src="./img/catalog.png" alt=""> Каталог</a>
                     </li>
 
                     <li>
-                        <a class="menu-item" href="/cart.html"> <img src="./img/cart.png" alt=""> Корзина</a>
+                        <a class="menu-item" href="cart.html"> <img src="./img/cart.png" alt=""> Корзина</a>
                     </li>
                 </ul>
             </div>
