--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <ul class="header-content-ul">
                             <li>Ваш персональный менеджер</li>
                             <li>Игорь Марченков</li>
-                            <li>arte,</li>
+                            <li>artem</li>
                         </ul>
                     </div>
 
